[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/gd/Menu.gd" type="Script" id=1]
[ext_resource path="res://data/img/backgrounds/background-menu.jpg" type="Texture" id=2]
[ext_resource path="res://src/tscn/Logo.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gd/Menu_music.gd" type="Script" id=4]
[ext_resource path="res://src/gd/Click_sound.gd" type="Script" id=5]
[ext_resource path="res://data/img/effects/effect_1.png" type="Texture" id=6]
[ext_resource path="res://data/img/spaceship_head.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Menu" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 800, 450 )
transparent_bg = true
handle_input_locally = false
render_direct_to_screen = true
render_target_v_flip = true
gui_disable_input = true

[node name="Spatial" parent="Viewport" instance=ExtResource( 3 )]

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.00496397
anchor_top = 0.00258292
anchor_right = 0.537433
anchor_bottom = 0.599798
margin_left = -7.63818
margin_top = -0.018157
margin_right = 890.022
margin_bottom = 434.99
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rocket_head" type="TextureRect" parent="Background"]
margin_left = 723.0
margin_top = 233.0
margin_right = 1001.0
margin_bottom = 456.0
rect_scale = Vector2( 0.155, 0.155 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="Particles2D" parent="Background"]
modulate = Color( 0.823529, 0.168627, 0.270588, 1 )
material = SubResource( 1 )
position = Vector2( 297.153, 250.444 )
rotation = 1.5708
scale = Vector2( 1.5, 2 )
amount = 7
lifetime = 0.8
process_material = SubResource( 2 )
texture = ExtResource( 6 )

[node name="Logo" type="Sprite" parent="Background"]
position = Vector2( 512, 120 )

[node name="Username" type="VBoxContainer" parent="Background"]
margin_left = 300.0
margin_top = 220.0
margin_right = 725.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enter_name" type="Label" parent="Background/Username"]
margin_right = 425.0
margin_bottom = 14.0
text = "Enter Your Username :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enter" type="LineEdit" parent="Background/Username"]
margin_top = 18.0
margin_right = 425.0
margin_bottom = 42.0
align = 1
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Background"]
margin_left = 200.0
margin_top = 400.0
margin_right = 825.0
margin_bottom = 470.0
rect_scale = Vector2( 1, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Background/Buttons"]
margin_right = 625.0
margin_bottom = 20.0
text = "Host"

[node name="Join" type="Button" parent="Background/Buttons"]
margin_top = 24.0
margin_right = 625.0
margin_bottom = 44.0
text = "Join"

[node name="Quit" type="Button" parent="Background/Buttons"]
margin_top = 48.0
margin_right = 625.0
margin_bottom = 68.0
text = "Quit"

[node name="Popup1" type="Popup" parent="Background"]
visible = true
modulate = Color( 1, 0, 0, 1 )
margin_left = 400.0
margin_top = 270.0
margin_right = 660.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Background/Popup1"]
margin_left = -63.2538
margin_top = 0.890869
margin_right = 331.746
margin_bottom = 14.8909
text = "Ton pseudo il est long comme le confinement, change moi ca !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup2" type="Popup" parent="Background"]
visible = true
modulate = Color( 0.101961, 1, 0, 1 )
margin_left = 450.0
margin_top = 270.0
margin_right = 579.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="Background/Popup2"]
margin_left = -52.563
margin_top = 0.495941
margin_right = 219.437
margin_bottom = 14.4959
text = "Attention, votre pseudo est claqué au sol !"

[node name="Popup3" type="Popup" parent="Background"]
visible = true
modulate = Color( 1, 0, 0, 1 )
margin_left = 370.0
margin_top = 270.0
margin_right = 630.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/Popup3"]
margin_right = 299.0
margin_bottom = 14.0
text = "Tu crois que tu vas te connecter sans pseudo ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="Background"]
margin_top = 580.0
margin_right = 1022.0
margin_bottom = 600.0
text = "Made by : Aissam RABHI, Maxime LAFONT, Naël SENNOUN, Tristan MICHEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_music" type="AudioStreamPlayer" parent="."]
script = ExtResource( 4 )

[node name="Click_sound" type="AudioStreamPlayer" parent="."]
script = ExtResource( 5 )
[connection signal="text_entered" from="Background/Username/Enter" to="." method="_on_Username_text_entered"]
[connection signal="pressed" from="Background/Buttons/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Background/Buttons/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Background/Buttons/Quit" to="." method="_on_Quit_pressed"]
